fixing icon sizee on smaller screen

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -261,6 +261,11 @@ input[type="range"]:active::-webkit-slider-thumb {
 
 
 @media only screen and (max-width:1024px) and (min-width:768px) {
+    .icon{
+    width:10px;
+    height: 10px;
+    margin:0 5px;
+    }
     .title {
             display: none;
         }
